# octo

./: .dvcignore  .env.example  .gitignore  AGENT_CONTEXT.md  Dockerfile  PIPELINE_RULES.md  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  dvc.yaml  local_run1.ipynb  ongoing.md  params.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
N1/: earth1.py  earth2.py  ee_season_dates_to_csv.py
app/: gradio_app.py
configs/: configD1.yaml  drive1.py  train_lulc.yaml
eo_pipeline/: Dockerfile  __init__.py  main.py  requirements.txt
eo_pipeline/config/: __init__.py  settings.py
eo_pipeline/core/: __init__.py  device.py  tile_grid.py
eo_pipeline/data/: __init__.py  gee.py  loader.py  preprocessor.py  sentinel_hub.py
eo_pipeline/explainability/: __init__.py  gradcam.py  lime_hooks.py  shap_hooks.py
eo_pipeline/indices/: __init__.py  spectral.py
eo_pipeline/integrations/: __init__.py  dvc_hooks.py  gradio_hooks.py  mlflow_hooks.py  wandb_hooks.py
eo_pipeline/models/: __init__.py  base.py  lst.py  lulc.py  water_quality.py
eo_pipeline/training/: __init__.py  evaluator.py  trainer.py
eo_pipeline/utils/: logging.py
huggingface_app/: DEPLOY.md  README.md  app.py  interface.py  requirements.txt
huggingface_app/utils/: __init__.py  lulc_analysis.py  plastic_detection.py  sample_loader.py  uhi_analysis.py  xai_visualization.py
mlops/docker/: entrypoint.sh
mlops/dvc/: remote_setup.md
mlops/mlflow/: mlflow_config.py  tracking.py
pilot_plan/: 01_prepare_data.py  02_train_xgb.py  03_shap_analysis.py  04_visualize_uhi.py  README.md
scripts/: align_features.py  align_seasonal.py  analyze_worldcover.py  download_worldcover.py  fix_tile_bounds.py  inspect_aligned.py  preprocess.py  train.py  validate_features.py  validate_modis.py
